--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,18 @@
   transform: rotate(360deg);
   }
   }
+
+  label {
+    margin-bottom: 5px;
+  }
+
+  input {
+    margin-bottom: 10px;
+    padding: 8px;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  button:hover {
+    background-color: #45a049;
+  }
