--- a/src/App.css
+++ b/src/App.css
@@ -41,8 +41,27 @@
     padding: 8px;
     width: 100%;
     box-sizing: border-box;
+    border-radius: 10px;
   }
 
+  button{
+    border-radius: 5px;
+  }
+  
   button:hover {
-    background-color: #45a049;
+    background-color: #459aa0;
+  }
+
+  table{
+    border: 2px solid;
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+  th,td{
+    border: 2px solid;
+    text-align: center;
+    width: 20%;
+  }
+  tbody tr:hover {
+    background-color: #e76868;
   }
